--- a/ui/my-component.reel/my-component.html
+++ b/ui/my-component.reel/my-component.html
@@ -6,8 +6,23 @@
     <script type="text/montage-serialization">
     {
         "owner": {
+            "prototype": "ui/my-component.reel",
             "properties": {
                 "element": {"#": "myComponent"}
+            }
+        },
+        "checkbox1": {
+            "prototype": "digit/ui/checkbox.reel",
+            "properties": {
+                "element": {"#": "checkbox"},
+                "checked": true
+            }
+        },
+        "textField1": {
+            "prototype": "digit/ui/text-field.reel",
+            "properties": {
+                "element": {"#": "textField"},
+                "placeholder": "Text"
             }
         }
     }
@@ -15,6 +30,8 @@
 </head>
 <body>
     <div data-montage-id="myComponent" class="MyComponent">
+        <input type="checkbox" data-montage-id="checkbox">
+        <input data-montage-id="textField" type="text">
     </div>
 </body>
 </html>
