--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -22,6 +22,14 @@
                 "label": "Button"
             }
         },
+        "button2": {
+            "prototype": "digit/ui/button.reel",
+            "properties": {
+                "element": {"#": "object"},
+                "enabled": true,
+                "label": "Button"
+            }
+        },
         "myComponent1": {
             "prototype": "ui/my-component.reel",
             "properties": {
@@ -44,6 +52,7 @@
 </head>
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
+        <button data-montage-id="object"></button>
         <button data-montage-id="button"></button>
         <ul data-montage-id="repetition">
             <li>
