Update component /ui/my-component.reel/

--- a/ui/my-component.reel/my-component.html
+++ b/ui/my-component.reel/my-component.html
@@ -11,6 +11,14 @@
                 "element": {"#": "myComponent"}
             }
         },
+        "button1": {
+            "prototype": "digit/ui/button.reel",
+            "properties": {
+                "element": {"#": "button"},
+                "enabled": true,
+                "label": "Button"
+            }
+        },
         "checkbox1": {
             "prototype": "digit/ui/checkbox.reel",
             "properties": {
@@ -32,6 +40,7 @@
     <div data-montage-id="myComponent" class="MyComponent">
         <input type="checkbox" data-montage-id="checkbox">
         <input data-montage-id="textField" type="text">
+        <button data-montage-id="button"></button>
     </div>
 </body>
 </html>
