--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -44,6 +44,7 @@
 </head>
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
+        <div data-montage-id="bye"></div>
         <button data-montage-id="button"></button>
         <ul data-montage-id="repetition">
             <li>
