--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -19,7 +19,7 @@
             "properties": {
                 "element": {"#": "button"},
                 "enabled": true,
-                "label": "Button"
+                "label": "Button asd"
             }
         },
         "myComponent1": {
