--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -47,7 +47,7 @@
         <button data-montage-id="button"></button>
         <ul data-montage-id="repetition">
             <li>
-                Item
+                testing
                 <div data-montage-id="myComponent"></div>
             </li>
         </ul>
