--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -28,10 +28,10 @@
                 "element": {"#": "myComponent"}
             }
         },
-        "repetition": {
+        "things": {
             "prototype": "montage/ui/repetition.reel",
             "properties": {
-                "element": {"#": "repetition"},
+                "element": {"#": "things"},
                 "content": [
                     1,
                     2,
@@ -45,7 +45,7 @@
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <button data-montage-id="button"></button>
-        <ul data-montage-id="repetition">
+        <ul data-montage-id="things">
             <li>
                 testing
                 <div data-montage-id="myComponent"></div>
