--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -22,16 +22,16 @@
                 "label": "Button asd"
             }
         },
-        "myComponent1": {
+        "item": {
             "prototype": "ui/my-component.reel",
             "properties": {
                 "element": {"#": "myComponent"}
             }
         },
-        "repetition1": {
+        "items": {
             "prototype": "montage/ui/repetition.reel",
             "properties": {
-                "element": {"#": "things"},
+                "element": {"#": "repetition"},
                 "content": [
                     1,
                     2,
@@ -45,7 +45,7 @@
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
         <button data-montage-id="button"></button>
-        <ul data-montage-id="things">
+        <ul data-montage-id="repetition">
             <li>
                 testing
                 <div data-montage-id="myComponent"></div>
