--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -28,7 +28,7 @@
                 "element": {"#": "myComponent"}
             }
         },
-        "items": {
+        "repetition": {
             "prototype": "montage/ui/repetition.reel",
             "properties": {
                 "element": {"#": "repetition"},
