--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta http-equiv="content-type" ="text/html; charset=utf-8">
+    <meta http-equiv="content-type" ="text="" html;="" charset="utf-8&quot;">
     <title>
         Main
     </title>
