--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>
-        Main
+        Mai
     </title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <script type="text/montage-serialization">
