Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -46,6 +46,12 @@
             "properties": {
                 "element": {"#": "myComponent"}
             }
+        },
+        "select1": {
+            "prototype": "digit/ui/select.reel",
+            "properties": {
+                "element": {"#": "select"}
+            }
         }
     }
     </script>
@@ -58,6 +64,11 @@
                 testing
                 <div data-montage-id="myComponent"></div>
                 <button data-montage-id="object"></button>
+                <select data-montage-id="select">
+                    <option value="">
+                        Select
+                    </option>
+                </select>
             </li>
         </ul>
     </div>
