--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -38,6 +38,14 @@
                 "label": "Hello"
             }
         },
+        "button4": {
+            "prototype": "digit/ui/button.reel",
+            "properties": {
+                "element": {"#": "button4"},
+                "enabled": true,
+                "label": "Button"
+            }
+        },
         "ef": {
             "prototype": "montage/ui/repetition.reel",
             "properties": {
@@ -66,6 +74,7 @@
 </head>
 <body>
     <div data-montage-id="main" data-montage-skin="light" class="Main">
+        <button data-montage-id="button4"></button>
         <button data-montage-id="object2"></button>
         <button data-montage-id="button"></button>
         <ul data-montage-id="repetition">
