Update component /ui/my-component.reel/

--- a/ui/my-component.reel/my-component.html
+++ b/ui/my-component.reel/my-component.html
@@ -26,6 +26,13 @@
                 "checked": true
             }
         },
+        "image": {
+            "prototype": "digit/ui/image.reel",
+            "properties": {
+                "element": {"#": "image"},
+                "src": "../../assets/images/montage-logo-gradients.svg"
+            }
+        },
         "textField1": {
             "prototype": "digit/ui/text-field.reel",
             "properties": {
@@ -40,6 +47,7 @@
     <div data-montage-id="myComponent" class="MyComponent">
         <input type="checkbox" data-montage-id="checkbox">
         <input data-montage-id="textField" type="text">
+        <img data-montage-id="image" src="">
         <button data-montage-id="button"></button>
     </div>
 </body>
