Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -9,7 +9,6 @@
     <script type="text/montage-serialization">
     {
         "owner": {
-            "prototype": "ui/main.reel",
             "properties": {
                 "element": {"#": "main"}
             }
@@ -35,7 +34,7 @@
             "properties": {
                 "element": {"#": "object2"},
                 "enabled": true,
-                "label": "Hello"
+                "label": "Blah"
             }
         },
         "ef": {
