--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -34,7 +34,7 @@
             "properties": {
                 "element": {"#": "object2"},
                 "enabled": true,
-                "label": "Blah"
+                "label": "Hello"
             }
         },
         "ef": {
