Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -34,6 +34,9 @@
             "properties": {
                 "element": {"#": "textField"},
                 "placeholderValue": "Text"
+            },
+            "bindings": {
+                "value": {"<->": "@textField2.value"}
             }
         },
         "textField2": {
