Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -26,7 +26,7 @@
             "properties": {
                 "element": {"#": "object2"},
                 "enabled": true,
-                "label": "Hello"
+                "label": "What;s u"
             }
         },
         "textField": {
@@ -52,6 +52,7 @@
         <input data-montage-id="textField2" type="text">
         <button data-montage-id="object2"></button>
         <button data-montage-id="button"></button>
+        <button></button>
     </div>
 </body>
 </html>
