Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -16,7 +16,7 @@
         "button1": {
             "prototype": "digit/ui/button.reel",
             "properties": {
-                "element": {"#": "button"},
+                "element": {"#": "manual"},
                 "enabled": true,
                 "label": "Goodbye"
             }
@@ -52,7 +52,7 @@
         <input data-montage-id="textField2" type="text">
         <button data-montage-id="object2"></button>
         <button data-montage-id="button"></button>
-        <button></button>
+        <button data-montage-id="manual" data-arg="wasd"></button>
     </div>
 </body>
 </html>
