Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -16,7 +16,7 @@
         "button1": {
             "prototype": "digit/ui/button.reel",
             "properties": {
-                "element": {"#": "manual"},
+                "element": {"#": "button"},
                 "enabled": true,
                 "label": "Goodbye"
             }
@@ -26,7 +26,7 @@
             "properties": {
                 "element": {"#": "object2"},
                 "enabled": true,
-                "label": "What;s u"
+                "label": "Hello"
             }
         },
         "textField": {
@@ -52,7 +52,6 @@
         <input data-montage-id="textField2" type="text">
         <button data-montage-id="object2"></button>
         <button data-montage-id="button"></button>
-        <button data-montage-id="manual" data-arg="wasd"></button>
     </div>
 </body>
 </html>
