Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -29,6 +29,12 @@
                 "label": "Hello"
             }
         },
+        "nameList": {
+            "prototype": "ui/name-list.reel",
+            "properties": {
+                "element": {"#": "nameList"}
+            }
+        },
         "textField": {
             "prototype": "digit/ui/text-field.reel",
             "properties": {
@@ -52,6 +58,7 @@
         <input data-montage-id="textField2" type="text">
         <button data-montage-id="object2"></button>
         <button data-montage-id="button"></button>
+        <div data-montage-id="nameList"></div>
     </div>
 </body>
 </html>
