Update component /ui/name-list.reel/

--- a/ui/name-list.reel/name-list.html
+++ b/ui/name-list.reel/name-list.html
@@ -58,13 +58,7 @@
                     2,
                     3
                 ],
-                "contentController": {"@": "rangeController"}
-            }
-        },
-        "text": {
-            "prototype": "montage/ui/text.reel",
-            "properties": {
-                "value": "Text"
+                "contentController": null
             }
         }
     }
