Update component /ui/name-list.reel/

--- a/ui/name-list.reel/name-list.html
+++ b/ui/name-list.reel/name-list.html
@@ -40,6 +40,9 @@
             "properties": {
                 "element": {"#": "listName"},
                 "value": "Text"
+            },
+            "bindings": {
+                "value": {"<-": "@names:iteration.object"}
             }
         },
         "name": {
