Update component /ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -21,12 +21,11 @@
                 "label": "one"
             }
         },
-        "button5": {
-            "prototype": "digit/ui/button.reel",
+        "checkbox": {
+            "prototype": "digit/ui/checkbox.reel",
             "properties": {
-                "element": {"#": "button5"},
-                "enabled": true,
-                "label": "two"
+                "element": {"#": "checkbox"},
+                "checked": true
             }
         },
         "condition": {
@@ -45,8 +44,8 @@
             <button data-montage-id="button">
 
             </button>
-            <button data-montage-id="button5"></button>
         </div>
+        <input type="checkbox" data-montage-id="checkbox">
     </div>
 </body>
 </html>
