--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -33,6 +33,9 @@
             "properties": {
                 "element": {"#": "condition"},
                 "removalStrategy": "hide"
+            },
+            "bindings": {
+                "condition": {"<-": "@checkbox.checked"}
             }
         }
     }
